# Building test package:
#
#     apt-get install libssl-dev libmariadbclient-dev php5 perl \
#         coreutils realpath libjansson-dev openjdk-7-jdk
#     pip install JayDeBeApi

project(maxscale_system_test)
cmake_minimum_required(VERSION 2.8)
include_directories("/usr/include/mysql/")
set(CTEST_BUILD_NAME "${BUILDNAME}")

set(CMAKE_CXX_FLAGS "-std=c++11")
set(CMAKE_CXX_FLAGS_DEBUG "-std=c++11")
set(CMAKE_CXX_FLAGS_RELEASE "-std=c++11")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-std=c++11")

# utilities.cmake contains all helper functions and extra tools
include(utilities.cmake)

# Is this needed?
configure_file(${CMAKE_SOURCE_DIR}/cnf/maxscale.cnf.template.setup_binlog.in ${CMAKE_BINARY_DIR}/cnf/maxscale.cnf.template.setup_binlog @ONLY)

# Enable Java
find_package(Java)
if(EXISTS ${Java_JAVA_EXECUTABLE} ${JAVA_JAVAC_EXECUTABLE} ${JAVA_JAR_EXECUTABLE})
  include(UseJava)
  if(Java_FOUND)
    add_subdirectory(maxscale/java/)
  endif()
else()
  message(WARNING "Java not found, Java based tests are not run.")
endif()

# Find the C connector
find_library(MYSQL_CLIENT mariadbclient mysqlclient PATH_SUFFIXES mysql mariadb)

# The core library
add_library(testcore SHARED testconnections.cpp mariadb_nodes.cpp
  mariadb_func.cpp get_com_select_insert.cpp maxadmin_operations.cpp big_transaction.cpp
  sql_t1.cpp test_binlog_fnc.cpp get_my_ip.cpp big_load.cpp  get_com_select_insert.cpp
  different_size.cpp fw_copy_rules maxinfo_func.cpp config_operations.cpp)
target_link_libraries(testcore ${MYSQL_CLIENT} z crypt nsl m pthread ssl crypto dl rt jansson)
install(TARGETS testcore DESTINATION system-test)

# Tool used to check backend state
add_test_executable_notest(check_backend.cpp check_backend check_backend LABELS CONFIG)

# Configuration tests
add_template(bug359 bug359)
add_template(bug495 bug495)
add_template(bug526 bug526)
add_template(bug479 bug479)
add_template(bug493 bug493)
add_template(bug643_1 bug643_1)
add_template(mxs652_bad_ssl bad_ssl)
add_template(mxs710_bad_socket mxs710_bad_socket)
add_template(mxs710_bad_socket mxs711_two_ports)
add_template(mxs720_line_with_no_equal mxs720_line_with_no_equal)
add_template(mxs720_wierd_line mxs720_wierd_line)
add_template(mxs710_bad_socket mxs799)
add_test_executable(config_test.cpp config_test replication LABELS CONFIG)

add_test_executable(backend_auth_fail.cpp backend_auth_fail replication LABELS readconnroute)
add_test_executable(bug143.cpp bug143 replication LABELS MySQLAuth)
add_test_executable(bug422.cpp bug422 replication LABELS readwritesplit readconnroute maxscale)
add_test_executable(bug448.cpp bug448 replication LABELS MySQLAuth LIGHT)
add_test_executable(bug469.cpp bug469 replication LABELS readwritesplit LIGHT)
add_test_executable(bug471.cpp bug471 bug471 LABELS readwritesplit hintfilter)
add_test_executable(bug473.cpp bug473 hints LABELS readwritesplit hintfilter)
add_test_executable(bug475.cpp bug475 hints LABELS readwritesplit hintfilter)
add_test_executable(bug488.cpp bug488 galera LABELS readwritesplit readconnroute maxscale)
add_test_executable(bug507.cpp bug507 replication LABELS readwritesplit LIGHT)
add_test_executable(bug509.cpp bug509 galera LABELS readwritesplit)
add_test_executable(bug519.cpp bug519 replication LABELS readwritesplit HEAVY)
add_test_executable(bug529.cpp bug529 replication LABELS readwritesplit readconnroute maxscale)
add_test_executable(bug547.cpp bug547 replication LABELS readwritesplit)
add_test_executable(bug681.cpp bug681 galera.bug681 LABELS readwritesplit)
add_test_executable(bug643.cpp bug643 bug643 LABELS tee)
add_test_script(bug561.sh bug561.sh replication LABELS MySQLAuth)
add_test_script(bug562.sh bug562.sh replication LABELS MySQLAuth)
add_test_script(bug564.sh bug564.sh replication LABELS MySQLProtocol)
add_test_executable(bug565.cpp bug565 replication LABELS MySQLProtocol)
add_test_script(bug567.sh bug567.sh replication LABELS maxscale)
add_test_executable(bug571.cpp bug571 bug571 LABELS regexfilter)
add_test_executable(bug572.cpp bug572 replication LABELS readwritesplit)
add_test_script(bug585 bug587 bug585 LABELS regexfilter)
add_test_executable(bug587.cpp bug587 bug587 LABELS regexfilter hintfilter)
add_test_script(bug587_1 bug587 bug587_1 LABELS regexfilter hintfilter)
add_test_executable(bug592.cpp bug592 replication LABELS MySQLAuth readwritesplit)
add_test_executable(bug601.cpp bug601 bug601 LABELS MySQLAuth MySQLProtocol)
add_test_executable(bug620.cpp bug620 bug620 LABELS MySQLAuth MySQLProtocol)
add_test_executable(bug626.cpp bug626 replication LABELS MySQLAuth MySQLProtocol)
add_test_executable(bug634.cpp bug634 replication LABELS readwritesplit)
add_test_executable(bug645.cpp bug645 bug645 LABELS tee)
add_test_executable(bug645_1.cpp bug645_1 bug645_1 LABELS tee)
add_test_script(bug648 sql_queries bug648 LABELS tee UNSTABLE HEAVY)
add_test_executable(bug649.cpp bug649 bug645 LABELS tee UNSTABLE HEAVY)
add_test_executable(bug650.cpp bug650 bug650 LABELS tee)
add_test_executable(bug653.cpp bug653 replication LABELS MySQLAuth MySQLProtocol)
add_test_executable(bug654.cpp bug654 replication LABELS maxscale)
add_test_executable(bug657.cpp bug657 bug657 LABELS tee UNSTABLE HEAVY)
add_test_executable(bug658.cpp bug658 replication LABELS readwritesplit readconnroute maxscale)
add_test_executable(bug662.cpp bug662 replication LABELS readwritesplit readconnroute maxscale)
add_test_executable(bug664.cpp bug664 bug664 LABELS MySQLAuth MySQLProtocol)
add_test_executable(bug670.cpp bug670 bug670 LABELS tee UNSTABLE HEAVY)
add_test_executable(bug673.cpp bug673 bug673 LABELS MySQLAuth)
add_test_executable(bug676.cpp bug676 galera.bug676 LABELS galeramon)
add_test_executable(bug694.cpp bug694 bug694 LABELS readwritesplit)
add_test_executable(bug699.cpp bug699 galera LABELS readwritesplit LIGHT)
add_test_executable(bug705.cpp bug705 bug705 LABELS MySQLAuth)
add_test_executable(bug711.cpp bug711 bug711 LABELS readwritesplit)
add_test_executable(bug729.cpp bug729 replication LABELS readwritesplit LIGHT)
add_test_executable(bug730.cpp bug730 bug730 LABELS regexfilter)
add_test_executable(ccrfilter.cpp ccrfilter ccrfilter LABELS ccrfilter LIGHT)
add_test_executable(change_master_during_session.cpp change_master_during_session replication LABELS readwritesplit mysqlmon)
add_test_executable(change_user.cpp change_user replication LABELS MySQLAuth MySQLProtocol LIGHT)
add_test_executable(connect_to_nonexisting_db.cpp connect_to_nonexisting_db replication LABELS MySQLAuth MySQLProtoco LIGHT)
add_test_executable(connection_limit.cpp connection_limit connection_limit LABELS maxscale LIGHT)
add_test_executable(crash_out_of_files.cpp crash_out_of_files load LABELS maxscale HEAVY)
add_test_executable(crash_out_of_files_galera.cpp crash_out_of_files_galera galera LABELS maxscale HEAVY)
add_test_executable(different_size_rwsplit.cpp different_size_rwsplit replication LABELS readwritesplit HEAVY)
add_test_executable(encrypted_passwords.cpp encrypted_passwords replication LABELS maxscale LIGHT)
add_test_executable(failover_mysqlmon.cpp failover_mysqlmon failover_mysqlmon LABELS mysqlmon)
add_test_executable(fwf.cpp fwf fwf LABELS dbfwfilter)
add_test_executable(fwf2.cpp fwf2 fwf LABELS dbfwfilter)
add_test_executable(fwf_actions.cpp fwf_actions fwf_action LABELS dbfwfilter)
add_test_executable(fwf_logging.cpp fwf_logging fwf_logging LABELS dbfwfilter)
add_test_executable(fwf_reload.cpp fwf_reload fwf LABELS dbfwfilter)
add_test_executable(fwf_syntax.cpp fwf_syntax fwf_syntax LABELS dbfwfilter)
add_test_executable(galera_priority.cpp galera_priority galera_priority LABELS galeramon LIGHT)
add_test_executable(kill_master.cpp kill_master replication LABELS readwritesplit LIGHT)
add_test_executable(load_balancing.cpp load_balancing load LABELS readwritesplit LIGHT)
add_test_executable(load_balancing_galera.cpp load_balancing_galera load_galera LABELS readwritesplit)
add_test_script(load_balancing_galera_pers1 load_balancing_galera load_galera_pers1 LABELS readwritesplit HEAVY)
add_test_script(load_balancing_galera_pers10 load_balancing_galera load_galera_pers10 LABELS readwritesplit HEAVY)
add_test_script(load_balancing_pers1 load_balancing load_pers1 LABELS readwritesplit HEAVY)
add_test_script(load_balancing_pers10 load_balancing load_pers10 LABELS readwritesplit HEAVY)
add_test_executable_notest(long_sysbench.cpp long_sysbench replication LABELS readwritesplit)
add_test_executable(longblob.cpp longblob longblob LABELS readwritesplit readconnroute UNSTABLE HEAVY)
add_test_executable(lots_of_rows.cpp lots_of_rows galera LABELS readwritesplit HEAVY)
add_test_script(mariadb_tests_hartmut.sh mariadb_tests_hartmut.sh replication LABELS readwritesplit)
add_test_script(mariadb_tests_hartmut_galera.sh mariadb_tests_hartmut_galera.sh replication LABELS readwritesplit)
add_test_executable(max_connections.cpp max_connections replication LABELS MySQLAuth MySQLProtocol UNSTABLE HEAVY HEAVY)
add_test_executable(maxinfo.cpp maxinfocpp maxinfo LABELS maxinfo UNSTABLE HEAVY)
add_test_script(maxinfo.py maxinfo.py maxinfo LABELS maxinfo LIGHT)
add_test_executable(maxscale_process_user.cpp maxscale_process_user replication LABELS maxscale LIGHT)
add_test_executable(mm.cpp mm mm LABELS mmmon)
add_test_executable(mm_mysqlmon.cpp mm_mysqlmon mm_mysqlmon LABELS mysqlmon)
add_test_executable(mxs118.cpp mxs118 mxs118 LABELS maxscale LIGHT)
add_test_executable(mxs127.cpp mxs127 mxs127 LABELS readwritesplit LIGHT)
add_test_executable(mxs244_prepared_stmt_loop.cpp mxs244_prepared_stmt_loop galera LABELS readwritesplit readconnroute LIGHT)
add_test_executable(mxs280_select_outfile.cpp mxs280_select_outfile replication LABELS readwritesplit)
add_test_executable(mxs314.cpp mxs314 galera LABELS MySQLProtocol LIGHT)
add_test_executable(mxs321.cpp mxs321 replication LABELS maxscale)
add_test_script(mxs361 pers_02 mxs361 mxs361 LABELS maxscale)
add_test_executable(mxs365.cpp mxs365 replication LABELS readwritesplit)
add_test_executable(mxs37_table_privilege.cpp mxs37_table_privilege replication LABELS MySQLAuth LIGHT)
add_test_script(mxs37_table_privilege_galera mxs37_table_privilege galera LABELS MySQLAuth)
add_test_executable(mxs431.cpp mxs431 sharding LABELS schemarouter)
add_test_executable(mxs47.cpp mxs47 replication LABELS MySQLProtocol LIGHT)
add_test_executable(mxs501_tee_usedb.cpp mxs501_tee_usedb mxs501 LABELS tee)
add_test_executable(mxs548_short_session_change_user.cpp mxs548_short_session_change_user mxs548 LABELS MySQLProtocol)
add_test_executable(mxs559_block_master.cpp mxs559_block_master mxs559 LABELS readwritesplit)
add_test_executable(mxs564_big_dump.cpp mxs564_big_dump galera_mxs564 LABELS readwritesplit readconnroute)
add_test_script(mxs585.py mxs585.py replication LABELS readwritesplit readconnroute UNSTABLE HEAVY)
add_test_script(mxs598.py mxs598.py ssl LABELS MySQLProtocol)
add_test_executable(mxs621_unreadable_cnf.cpp mxs621_unreadable_cnf replication LABELS maxscale)
add_test_executable(mxs657_restart.cpp mxs657_restart replication LABELS maxscale HEAVY)
add_test_executable(mxs657_restart_service.cpp mxs657_restart_service replication LABELS maxscale)
add_test_executable(mxs682_cyrillic.cpp mxs682_cyrillic replication LABELS maxscale LIGHT)
add_test_script(mxs682_cyrillic_galera mxs682_cyrillic galera LABELS maxscale)
add_test_executable(mxs716.cpp mxs716 replication LABELS MySQLAuth LIGHT)
add_test_executable(mxs722.cpp mxs722 replication LABELS maxscale LIGHT)
add_test_executable(mxs729_maxadmin.cpp mxs729_maxadmin replication LABELS MaxAdminAuth LIGHT)
add_test_script(mxs791.sh mxs791.sh replication LABELS UNSTABLE HEAVY)
add_test_script(mxs791_galera.sh mxs791_galera.sh galera LABELS UNSTABLE HEAVY)
add_test_executable(mxs812_1.cpp mxs812_1 longblob LABELS readwritesplit)
add_test_executable(mxs812_2.cpp mxs812_2 longblob LABELS readwritesplit)
add_test_executable(mxs822_maxpasswd.cpp mxs822_maxpasswd maxpasswd LABELS maxscale)
add_test_executable(mxs827_write_timeout.cpp mxs827_write_timeout replication LABELS readwritesplit)
add_test_executable(mxs874_slave_recovery.cpp mxs874_slave_recovery mxs874 LABELS readwritesplit)
add_test_executable(mxs922_bad_server.cpp mxs922_bad_server mxs922 LABELS maxscale)
add_test_executable(mxs922_monitor.cpp mxs922_monitor mxs922_base LABELS maxscale)
add_test_executable(mxs922_restart.cpp mxs922_restart mxs922 LABELS maxscale)
add_test_executable(mxs922_scaling.cpp mxs922_scaling mxs922_scaling LABELS maxscale)
add_test_executable(mxs951_utfmb4_galera.cpp mxs951_utfmb4_galera galera LABELS galeramon)
add_test_executable(mxs957.cpp mxs957 replication LABELS readwritesplit)
add_test_executable(mxs1045.cpp mxs1045 mxs1045 LABELS maxscale)
add_test_executable(namedserverfilter.cpp namedserverfilter namedserverfilter LABELS namedserverfilter LIGHT)
add_test_executable(open_close_connections.cpp open_close_connections replication LABELS maxscale)
add_test_script(open_close_connections_ssl open_close_connections ssl LABELS maxscale)
add_test_executable(pers_01.cpp pers_01 pers_01 LABELS maxscale)
add_test_executable(pers_02.cpp pers_02 pers_01 LABELS maxscale)
add_test_executable(prepared_statement.cpp prepared_statement replication LABELS readwritesplit LIGHT)
add_test_executable(readconnrouter_master.cpp readconnrouter_master replication LABELS readconnroute LIGHT)
add_test_executable(readconnrouter_slave.cpp readconnrouter_slave replication LABELS readconnroute LIGHT)
add_test_executable(regexfilter1.cpp regexfilter1 regexfilter1 LABELS regexfilter LIGHT)
add_test_script(run_ctrl_c.sh run_ctrl_c.sh replication LABELS maxscale LIGHT)
add_test_script(run_session_hang.sh run_session_hang.sh replication LABELS readwritesplit)
add_test_executable(rw_galera_select_insert.cpp rw_galera_select_insert galera LABELS readwritesplit)
add_test_executable(rw_select_insert.cpp rw_select_insert replication LABELS readwritesplit)
add_test_executable(rwsplit_conn_num.cpp rwsplit_conn_num repl_lgc LABELS readwritesplit LIGHT)
add_test_executable(rwsplit_connect.cpp rwsplit_connect replication LABELS readwritesplit LIGHT)
add_test_executable(rwsplit_readonly.cpp rwsplit_readonly rwsplit_readonly LABELS readwritesplit)
add_test_executable(rwsplit_readonly_stress.cpp rwsplit_readonly_stress rwsplit_readonly LABELS readwritesplit HEAVY)
add_test_executable(schemarouter_duplicate_db.cpp schemarouter_duplicate_db schemarouter_duplicate_db LABELS schemarouter)
add_test_executable(script.cpp script script LABELS maxscale)
add_test_executable(server_weight.cpp server_weight galera.weight LABELS readwritesplit readconnroute LIGHT)
add_test_executable(ses_bigmem.cpp ses_bigmem no_ses_cmd_store LABELS readwritesplit)
add_test_executable(session_limits.cpp session_limits session_limits LABELS readwritesplit)
add_test_executable(sharding.cpp sharding sharding LABELS schemarouter)
add_test_executable(short_sessions.cpp short_sessions replication LABELS readwritesplit readconnroute)
add_test_script(short_sessions_ssl short_sessions ssl LABELS readwritesplit readconnroute)
add_test_executable(show_monitor_crash.cpp show_monitor_crash show_monitor_crash LABELS maxscale)
add_test_executable(slave_failover.cpp slave_failover replication.one_slave LABELS readwritesplit)
add_test_executable(sql_queries.cpp sql_queries replication LABELS readwritesplit)
add_test_script(sql_queries_pers1 sql_queries sql_queries_pers1 LABELS maxscale readwritesplit HEAVY)
add_test_script(sql_queries_pers10 sql_queries sql_queries_pers10 LABELS maxscale readwritesplit HEAVY)
add_test_script(ssl sql_queries ssl LABELS maxscale readwritesplit)
add_test_script(ssl_load load_balancing ssl_load LABELS maxscale readwritesplit)
add_test_script(ssl_load_galera load_balancing_galera ssl_load_galera LABELS maxscale readwritesplit)
add_test_executable(stale_slaves.cpp stale_slaves replication LABELS mysqlmon)
add_test_executable(sysbench_kill_slave.cpp sysbench_kill_slave replication LABELS UNSTABLE HEAVY)
add_test_executable(temporal_tables.cpp temporal_tables replication LABELS readwritesplit)
add_test_executable(test_hints.cpp test_hints hints2 LABELS hintfilter LIGHT)

# Binlogrouter tests, these heavily alter the replication so they are run last
add_test_executable(avro.cpp avro avro LABELS avrorouter binlogrouter LIGHT)
add_test_executable(binlog_change_master.cpp binlog_change_master setup_binlog_tx_safe LABELS binlogrouter)
add_test_executable(binlog_incompl.cpp binlog_incompl binlog_incompl LABELS binlogrouter)
add_test_executable(binlog_semisync.cpp binlog_semisync setup_binlog_semisync LABELS binlogrouter HEAVY)
add_test_script(binlog_semisync_txs0_ss0 binlog_semisync setup_binlog_semisync_txs0_ss0 LABELS binlogrouter HEAVY)
add_test_script(binlog_semisync_txs0_ss1 binlog_semisync setup_binlog_semisync_txs0_ss1 LABELS binlogrouter HEAVY)
add_test_script(binlog_semisync_txs1_ss0 binlog_semisync setup_binlog_semisync_txs1_ss0 LABELS binlogrouter HEAVY)
add_test_executable(cdc_client.cpp cdc_client avro LABELS avrorouter binlogrouter)
add_test_executable(different_size_binlog.cpp different_size_binlog setup_binlog LABELS binlogrouter HEAVY)
add_test_executable(mxs781_binlog_wrong_passwrd.cpp mxs781_binlog_wrong_passwrd setup_binlog LABELS binlogrouter)
add_test_executable(mxs813_long_hostname.cpp mxs813_long_hostname setup_binlog LABELS binlogrouter)
add_test_executable(setup_binlog.cpp setup_binlog setup_binlog LABELS binlogrouter)
add_test_executable(setup_binlog_crc_32.cpp setup_binlog_crc_32 setup_binlog LABELS binlogrouter)
add_test_executable(setup_binlog_crc_none.cpp setup_binlog_crc_none setup_binlog LABELS binlogrouter LIGHT)

# enable after fixing MXS-419
# add_test_executable(mxs419_lots_of_connections.cpp mxs419_lots_of_connections replication)

# TODO: Alter the user_cache test
# add_test_executable(user_cache.cpp user_cache user_cache)

# https://mariadb.atlassian.net/browse/MXS-576 - it is possible to set negative value for
# 'persistpoolmax' without any warning
#add_test_executable(bad_pers.cpp bad_pers bad_pers)

# Disabled until test system supports RDS backends
# add_test_executable(auroramon.cpp auroramon auroramon)

# Disabled for the time being
# add_test_executable(gatekeeper.cpp gatekeeper gatekeeper LABELS gatekeeper)

configure_file(templates.h.in templates.h @ONLY)

enable_testing()
include(CTest)
